refactor(subject): optimize data fetching and expand API capabilities
- Replaced N+1 database calls in getAll() with a single grouped query.

- Added getById, update, and delete endpoints.

- Implemented ownership check in findById to prevent unauthorized access.

- Added support for custom colors in SubjectDTO.